--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -23,9 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .[all]
-          pip install pytest
       - name: Run tests
-        run: pytest
+        run: python -m unittest discover
 
   publish:
     needs: test
