--- a/.github/workflows/test-release-publish.yml
+++ b/.github/workflows/test-release-publish.yml
@@ -41,6 +41,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install build
+        run: pip install build
       - name: Python Semantic Release
         uses: python-semantic-release/python-semantic-release@master
         with:
