--- a/.github/workflows/test-release-publish.yml
+++ b/.github/workflows/test-release-publish.yml
@@ -45,8 +45,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install build
-        run: pip install build
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
       - name: Python Semantic Release
         uses: python-semantic-release/python-semantic-release@master
         with:
