--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ dist_path = "dist/"
 commit_message = "chore: Bump version to {version}"
 
 [dependency-groups]
-dev = []
+dev = [
+    "ruff>=0.8.3",
+]
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
