--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Test, Release and Publish
+name: Release
 
 on:
   push:
@@ -7,29 +7,8 @@ on:
     branches: [master]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv pip install --system -e ".[all]"
-      - name: Run tests
-        env:
-          OPENAI_API_KEY: test-key
-        run: python -m unittest discover
-
   release:
-    needs: test
+    needs: [ruff, test]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     concurrency: release
