--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Small OpenAI/Anthropic library to support chat templates, and fun
 authors = [
     {name = "Benjamin Derville", email = "benderville@gmail.com"}
 ]
+license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -12,6 +13,10 @@ dependencies = [
     "pillow==10.4.0",
     "httpx==0.27.2",
 ]
+
+[project.urls]
+Repository = "https://github.com/BenderV/autochat"
+Changelog = "https://github.com/BenderV/autochat/blob/master/CHANGELOG.md"
 
 [project.optional-dependencies]
 anthropic = ["anthropic==0.37.1"]
