--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "tenacity==8.3.0",
     "pillow==10.4.0",
     "httpx==0.27.2",
+    "pydantic>=2.10.3",
 ]
 
 [project.urls]
@@ -22,8 +23,15 @@ Changelog = "https://github.com/BenderV/autochat/blob/master/CHANGELOG.md"
 anthropic = ["anthropic==0.37.1"]
 openai = ["openai==1.52.2"]
 all = [
-  "anthropic==0.37.1",
-  "openai==1.52.2",
+    "anthropic==0.37.1",
+    "openai==1.52.2",
+]
+dev = [
+    "anthropic==0.37.1",
+    "openai==1.52.2",
+    "pytest-recording>=0.13.2",
+    "pytest>=8.3.4",
+    "ruff>=0.8.3",
 ]
 
 [tool.semantic_release]
@@ -39,11 +47,6 @@ build_command = "pip install build && python -m build"
 changelog_file = "CHANGELOG.md"
 dist_path = "dist/"
 commit_message = "chore(release): bump version to {version}"
-
-[dependency-groups]
-dev = [
-    "ruff>=0.8.3",
-]
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
