--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dev = [
 [tool.semantic_release]
 version_source = "commit"
 version_variables = [
-    "autochat/__init__.py:__version__",
+    "src/autochat/__init__.py:__version__",
 ]
 version_toml = [
     "pyproject.toml:project.version",
