--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - uses: actions/checkout@v4
@@ -30,10 +30,6 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv pip install --system -e ".[dev]"
       - name: Run tests
-        env:
-          OPENAI_API_KEY: test-key
-        run: python -m unittest discover
-      - name: Run Pytest
         env:
           OPENAI_API_KEY: fake
           ANTHROPIC_API_KEY: fake
