--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "pillow==10.4.0",
-    "httpx==0.27.2",
     "pydantic>=2.10.3",
 ]
 
@@ -19,15 +18,15 @@ Repository = "https://github.com/BenderV/autochat"
 Changelog = "https://github.com/BenderV/autochat/blob/master/CHANGELOG.md"
 
 [project.optional-dependencies]
-anthropic = ["anthropic==0.37.1"]
-openai = ["openai==1.52.2"]
+anthropic = ["anthropic>=0.37.1"]
+openai = ["openai>=1.52.2"]
 all = [
-    "anthropic==0.37.1",
-    "openai==1.52.2",
+    "anthropic>=0.37.1",
+    "openai>=1.52.2",
 ]
 dev = [
-    "anthropic==0.37.1",
-    "openai==1.52.2",
+    "anthropic>=0.37.1",
+    "openai>=1.52.2",
     "pytest-recording>=0.13.2",
     "pytest>=8.3.4",
     "ruff>=0.8.3",
