--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,14 @@ changelog_file = "CHANGELOG.md"
 dist_path = "dist/"
 commit_message = "chore(release): bump version to {version}"
 
+[tool.uv.sources]
+autochat = { workspace = true }
+
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+dev = [
+    "autochat",
+]
