--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv pip install --system -e ".[dev]"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+      - name: Install the project
+        run: uv sync --all-extras --dev
       - name: Run tests
         env:
           OPENAI_API_KEY: fake
           ANTHROPIC_API_KEY: fake
-        run: pytest tests
+        run: uv pytest tests
