--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,4 +36,4 @@ jobs:
         env:
           OPENAI_API_KEY: fake
           ANTHROPIC_API_KEY: fake
-        run: uv pytest tests
+        run: uv run pytest tests
