--- a/tests/mcp_clients/cassettes/test_mcp/test_mcp_openai.yaml
+++ b/tests/mcp_clients/cassettes/test_mcp/test_mcp_openai.yaml
@@ -2,8 +2,8 @@ interactions:
 - request:
     body: '{"messages":[{"role":"user","content":[{"type":"text","text":"Use calculator
       to add 1 and 2"}]}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
-      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"echo__","description":"uri:echo__","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"echo2__message","description":"uri:echo2__message\nEcho
-      a message as a resource","parameters":{"properties":{},"required":[],"type":"object"}}]}'
+      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"files__","description":"uri:files://","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"files__file_name","description":"uri:files://{file_name}\nGet
+      a file","parameters":{"properties":{"file_name":{"title":"file_name","type":"string"}},"required":["file_name"],"type":"object"}}]}'
     headers:
       content-type:
       - application/json
@@ -15,15 +15,15 @@ interactions:
     uri: https://api.openai.com/v1/chat/completions
   response:
     body:
-      string: "{\n  \"id\": \"chatcmpl-BJeSyqQim7STL41jNq101jcG7pDAc\",\n  \"object\":
-        \"chat.completion\",\n  \"created\": 1744023484,\n  \"model\": \"gpt-4o-2024-08-06\",\n
+      string: "{\n  \"id\": \"chatcmpl-BJg5fJ9Ej4uHAYwPeONeLz3ipX6y8\",\n  \"object\":
+        \"chat.completion\",\n  \"created\": 1744029727,\n  \"model\": \"gpt-4o-2024-08-06\",\n
         \ \"choices\": [\n    {\n      \"index\": 0,\n      \"message\": {\n        \"role\":
         \"assistant\",\n        \"content\": null,\n        \"function_call\": {\n
         \         \"name\": \"add\",\n          \"arguments\": \"{\\\"a\\\":1,\\\"b\\\":2}\"\n
         \       },\n        \"refusal\": null,\n        \"annotations\": []\n      },\n
         \     \"logprobs\": null,\n      \"finish_reason\": \"function_call\"\n    }\n
-        \ ],\n  \"usage\": {\n    \"prompt_tokens\": 99,\n    \"completion_tokens\":
-        18,\n    \"total_tokens\": 117,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\":
+        \ ],\n  \"usage\": {\n    \"prompt_tokens\": 108,\n    \"completion_tokens\":
+        18,\n    \"total_tokens\": 126,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\":
         0,\n      \"audio_tokens\": 0\n    },\n    \"completion_tokens_details\":
         {\n      \"reasoning_tokens\": 0,\n      \"audio_tokens\": 0,\n      \"accepted_prediction_tokens\":
         0,\n      \"rejected_prediction_tokens\": 0\n    }\n  },\n  \"service_tier\":
@@ -52,8 +52,8 @@ interactions:
     body: '{"messages":[{"role":"user","content":[{"type":"text","text":"Use calculator
       to add 1 and 2"}]},{"role":"assistant","content":[],"function_call":{"name":"add","arguments":"{\"a\":
       1, \"b\": 2}"}},{"role":"function","content":[{"type":"text","text":"3"}],"name":"add"}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
-      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"echo__","description":"uri:echo__","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"echo2__message","description":"uri:echo2__message\nEcho
-      a message as a resource","parameters":{"properties":{},"required":[],"type":"object"}}]}'
+      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"files__","description":"uri:files://","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"files__file_name","description":"uri:files://{file_name}\nGet
+      a file","parameters":{"properties":{"file_name":{"title":"file_name","type":"string"}},"required":["file_name"],"type":"object"}}]}'
     headers:
       content-type:
       - application/json
@@ -65,13 +65,13 @@ interactions:
     uri: https://api.openai.com/v1/chat/completions
   response:
     body:
-      string: "{\n  \"id\": \"chatcmpl-BJeSyRVNl3mhwmTZ5ZJA85Osmhmtp\",\n  \"object\":
-        \"chat.completion\",\n  \"created\": 1744023484,\n  \"model\": \"gpt-4o-2024-08-06\",\n
+      string: "{\n  \"id\": \"chatcmpl-BJg5g3OPQZegyInThEsz91BSP5Wep\",\n  \"object\":
+        \"chat.completion\",\n  \"created\": 1744029728,\n  \"model\": \"gpt-4o-2024-08-06\",\n
         \ \"choices\": [\n    {\n      \"index\": 0,\n      \"message\": {\n        \"role\":
-        \"assistant\",\n        \"content\": \"The result of adding 1 and 2 is 3.\",\n
-        \       \"refusal\": null,\n        \"annotations\": []\n      },\n      \"logprobs\":
-        null,\n      \"finish_reason\": \"stop\"\n    }\n  ],\n  \"usage\": {\n    \"prompt_tokens\":
-        124,\n    \"completion_tokens\": 15,\n    \"total_tokens\": 139,\n    \"prompt_tokens_details\":
+        \"assistant\",\n        \"content\": \"The sum of 1 and 2 is 3.\",\n        \"refusal\":
+        null,\n        \"annotations\": []\n      },\n      \"logprobs\": null,\n
+        \     \"finish_reason\": \"stop\"\n    }\n  ],\n  \"usage\": {\n    \"prompt_tokens\":
+        133,\n    \"completion_tokens\": 14,\n    \"total_tokens\": 147,\n    \"prompt_tokens_details\":
         {\n      \"cached_tokens\": 0,\n      \"audio_tokens\": 0\n    },\n    \"completion_tokens_details\":
         {\n      \"reasoning_tokens\": 0,\n      \"audio_tokens\": 0,\n      \"accepted_prediction_tokens\":
         0,\n      \"rejected_prediction_tokens\": 0\n    }\n  },\n  \"service_tier\":
@@ -100,10 +100,10 @@ interactions:
     body: '{"messages":[{"role":"user","content":[{"type":"text","text":"Use calculator
       to add 1 and 2"}]},{"role":"assistant","content":[],"function_call":{"name":"add","arguments":"{\"a\":
       1, \"b\": 2}"}},{"role":"function","content":[{"type":"text","text":"3"}],"name":"add"},{"role":"assistant","content":[{"type":"text","text":"The
-      result of adding 1 and 2 is 3."}]},{"role":"user","content":[{"type":"text","text":"Call
-      echo and then echo with parameter ''hello''"}]}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
-      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"echo__","description":"uri:echo__","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"echo2__message","description":"uri:echo2__message\nEcho
-      a message as a resource","parameters":{"properties":{},"required":[],"type":"object"}}]}'
+      sum of 1 and 2 is 3."}]},{"role":"user","content":[{"type":"text","text":"List
+      files and then get file1"}]}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
+      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"files__","description":"uri:files://","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"files__file_name","description":"uri:files://{file_name}\nGet
+      a file","parameters":{"properties":{"file_name":{"title":"file_name","type":"string"}},"required":["file_name"],"type":"object"}}]}'
     headers:
       content-type:
       - application/json
@@ -115,15 +115,15 @@ interactions:
     uri: https://api.openai.com/v1/chat/completions
   response:
     body:
-      string: "{\n  \"id\": \"chatcmpl-BJeSzArGCBn9f95hqvH2iXKuFv7yN\",\n  \"object\":
-        \"chat.completion\",\n  \"created\": 1744023485,\n  \"model\": \"gpt-4o-2024-08-06\",\n
+      string: "{\n  \"id\": \"chatcmpl-BJg5gcQA9ClKEbKdYXj6L5YH1sB6m\",\n  \"object\":
+        \"chat.completion\",\n  \"created\": 1744029728,\n  \"model\": \"gpt-4o-2024-08-06\",\n
         \ \"choices\": [\n    {\n      \"index\": 0,\n      \"message\": {\n        \"role\":
         \"assistant\",\n        \"content\": null,\n        \"function_call\": {\n
-        \         \"name\": \"echo__\",\n          \"arguments\": \"{}\"\n        },\n
+        \         \"name\": \"files__\",\n          \"arguments\": \"{}\"\n        },\n
         \       \"refusal\": null,\n        \"annotations\": []\n      },\n      \"logprobs\":
         null,\n      \"finish_reason\": \"function_call\"\n    }\n  ],\n  \"usage\":
-        {\n    \"prompt_tokens\": 155,\n    \"completion_tokens\": 11,\n    \"total_tokens\":
-        166,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\": 0,\n      \"audio_tokens\":
+        {\n    \"prompt_tokens\": 160,\n    \"completion_tokens\": 11,\n    \"total_tokens\":
+        171,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\": 0,\n      \"audio_tokens\":
         0\n    },\n    \"completion_tokens_details\": {\n      \"reasoning_tokens\":
         0,\n      \"audio_tokens\": 0,\n      \"accepted_prediction_tokens\": 0,\n
         \     \"rejected_prediction_tokens\": 0\n    }\n  },\n  \"service_tier\":
@@ -152,11 +152,10 @@ interactions:
     body: '{"messages":[{"role":"user","content":[{"type":"text","text":"Use calculator
       to add 1 and 2"}]},{"role":"assistant","content":[],"function_call":{"name":"add","arguments":"{\"a\":
       1, \"b\": 2}"}},{"role":"function","content":[{"type":"text","text":"3"}],"name":"add"},{"role":"assistant","content":[{"type":"text","text":"The
-      result of adding 1 and 2 is 3."}]},{"role":"user","content":[{"type":"text","text":"Call
-      echo and then echo with parameter ''hello''"}]},{"role":"assistant","content":[],"function_call":{"name":"echo__","arguments":"{}"}},{"role":"function","content":[{"type":"text","text":"Resource
-      echo: hello world"}],"name":"echo__"}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
-      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"echo__","description":"uri:echo__","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"echo2__message","description":"uri:echo2__message\nEcho
-      a message as a resource","parameters":{"properties":{},"required":[],"type":"object"}}]}'
+      sum of 1 and 2 is 3."}]},{"role":"user","content":[{"type":"text","text":"List
+      files and then get file1"}]},{"role":"assistant","content":[],"function_call":{"name":"files__","arguments":"{}"}},{"role":"function","content":[{"type":"text","text":"file1\nfile2"}],"name":"files__"}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
+      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"files__","description":"uri:files://","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"files__file_name","description":"uri:files://{file_name}\nGet
+      a file","parameters":{"properties":{"file_name":{"title":"file_name","type":"string"}},"required":["file_name"],"type":"object"}}]}'
     headers:
       content-type:
       - application/json
@@ -168,15 +167,15 @@ interactions:
     uri: https://api.openai.com/v1/chat/completions
   response:
     body:
-      string: "{\n  \"id\": \"chatcmpl-BJeSzQnXTyknYAE77XY98Lk3gCGSP\",\n  \"object\":
-        \"chat.completion\",\n  \"created\": 1744023485,\n  \"model\": \"gpt-4o-2024-08-06\",\n
+      string: "{\n  \"id\": \"chatcmpl-BJg5hTqkD0vfKMXUkMEwrO9jRONh0\",\n  \"object\":
+        \"chat.completion\",\n  \"created\": 1744029729,\n  \"model\": \"gpt-4o-2024-08-06\",\n
         \ \"choices\": [\n    {\n      \"index\": 0,\n      \"message\": {\n        \"role\":
         \"assistant\",\n        \"content\": null,\n        \"function_call\": {\n
-        \         \"name\": \"echo2__message\",\n          \"arguments\": \"{}\"\n
+        \         \"name\": \"files__file_name\",\n          \"arguments\": \"{\\\"file_name\\\":\\\"file1\\\"}\"\n
         \       },\n        \"refusal\": null,\n        \"annotations\": []\n      },\n
         \     \"logprobs\": null,\n      \"finish_reason\": \"function_call\"\n    }\n
-        \ ],\n  \"usage\": {\n    \"prompt_tokens\": 178,\n    \"completion_tokens\":
-        13,\n    \"total_tokens\": 191,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\":
+        \ ],\n  \"usage\": {\n    \"prompt_tokens\": 183,\n    \"completion_tokens\":
+        19,\n    \"total_tokens\": 202,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\":
         0,\n      \"audio_tokens\": 0\n    },\n    \"completion_tokens_details\":
         {\n      \"reasoning_tokens\": 0,\n      \"audio_tokens\": 0,\n      \"accepted_prediction_tokens\":
         0,\n      \"rejected_prediction_tokens\": 0\n    }\n  },\n  \"service_tier\":
@@ -205,12 +204,11 @@ interactions:
     body: '{"messages":[{"role":"user","content":[{"type":"text","text":"Use calculator
       to add 1 and 2"}]},{"role":"assistant","content":[],"function_call":{"name":"add","arguments":"{\"a\":
       1, \"b\": 2}"}},{"role":"function","content":[{"type":"text","text":"3"}],"name":"add"},{"role":"assistant","content":[{"type":"text","text":"The
-      result of adding 1 and 2 is 3."}]},{"role":"user","content":[{"type":"text","text":"Call
-      echo and then echo with parameter ''hello''"}]},{"role":"assistant","content":[],"function_call":{"name":"echo__","arguments":"{}"}},{"role":"function","content":[{"type":"text","text":"Resource
-      echo: hello world"}],"name":"echo__"},{"role":"assistant","content":[],"function_call":{"name":"echo2__message","arguments":"{}"}},{"role":"function","content":[{"type":"text","text":"Resource
-      echo: message"}],"name":"echo2__message"}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
-      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"echo__","description":"uri:echo__","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"echo2__message","description":"uri:echo2__message\nEcho
-      a message as a resource","parameters":{"properties":{},"required":[],"type":"object"}}]}'
+      sum of 1 and 2 is 3."}]},{"role":"user","content":[{"type":"text","text":"List
+      files and then get file1"}]},{"role":"assistant","content":[],"function_call":{"name":"files__","arguments":"{}"}},{"role":"function","content":[{"type":"text","text":"file1\nfile2"}],"name":"files__"},{"role":"assistant","content":[],"function_call":{"name":"files__file_name","arguments":"{\"file_name\":
+      \"file1\"}"}},{"role":"function","content":[{"type":"text","text":"Hello world"}],"name":"files__file_name"}],"model":"gpt-4o","functions":[{"name":"add","description":"Add
+      two numbers","parameters":{"properties":{"a":{"title":"A","type":"integer"},"b":{"title":"B","type":"integer"}},"required":["a","b"],"title":"addArguments","type":"object"}},{"name":"files__","description":"uri:files://","parameters":{"properties":{},"required":[],"type":"object"}},{"name":"files__file_name","description":"uri:files://{file_name}\nGet
+      a file","parameters":{"properties":{"file_name":{"title":"file_name","type":"string"}},"required":["file_name"],"type":"object"}}]}'
     headers:
       content-type:
       - application/json
@@ -222,15 +220,14 @@ interactions:
     uri: https://api.openai.com/v1/chat/completions
   response:
     body:
-      string: "{\n  \"id\": \"chatcmpl-BJeT1QdBh58XVUMmKsQ85l1z8SOA1\",\n  \"object\":
-        \"chat.completion\",\n  \"created\": 1744023487,\n  \"model\": \"gpt-4o-2024-08-06\",\n
+      string: "{\n  \"id\": \"chatcmpl-BJg5iMG7ZgdeXv77M6RrCeYUpzWhO\",\n  \"object\":
+        \"chat.completion\",\n  \"created\": 1744029730,\n  \"model\": \"gpt-4o-2024-08-06\",\n
         \ \"choices\": [\n    {\n      \"index\": 0,\n      \"message\": {\n        \"role\":
-        \"assistant\",\n        \"content\": \"I have called `echo`, which returned
-        \\\"hello world\\\", and then `echo with parameter 'hello'`, which returned
-        a resource labeled \\\"message\\\".\",\n        \"refusal\": null,\n        \"annotations\":
-        []\n      },\n      \"logprobs\": null,\n      \"finish_reason\": \"stop\"\n
-        \   }\n  ],\n  \"usage\": {\n    \"prompt_tokens\": 204,\n    \"completion_tokens\":
-        32,\n    \"total_tokens\": 236,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\":
+        \"assistant\",\n        \"content\": \"The content of \\\"file1\\\" is: \\\"Hello
+        world\\\".\",\n        \"refusal\": null,\n        \"annotations\": []\n      },\n
+        \     \"logprobs\": null,\n      \"finish_reason\": \"stop\"\n    }\n  ],\n
+        \ \"usage\": {\n    \"prompt_tokens\": 213,\n    \"completion_tokens\": 15,\n
+        \   \"total_tokens\": 228,\n    \"prompt_tokens_details\": {\n      \"cached_tokens\":
         0,\n      \"audio_tokens\": 0\n    },\n    \"completion_tokens_details\":
         {\n      \"reasoning_tokens\": 0,\n      \"audio_tokens\": 0,\n      \"accepted_prediction_tokens\":
         0,\n      \"rejected_prediction_tokens\": 0\n    }\n  },\n  \"service_tier\":
