--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "pillow==10.4.0",
+    "pre-commit>=4.2.0",
     "pydantic>=2.10.3",
 ]
 
