--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.9"
 dependencies = [
     "pillow==10.4.0",
     "pre-commit>=4.2.0",
-    "pydantic>=2.10.3",
+    "pydantic==2.10.3",
 ]
 
 [project.urls]
@@ -32,6 +32,7 @@ all = [
 dev = [
     "anthropic>=0.46.0",
     "openai>=1.63.2",
+    "mcp>=1.6.0; python_version >= '3.10'",
     "pytest-recording>=0.13.2",
     "pytest>=8.3.4",
     "ruff>=0.8.3",
