--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "pillow==10.4.0",
-    "pre-commit>=4.2.0",
-    "pydantic>=2.10.3",
+    "pydantic==2.10.3",
 ]
 
 [project.urls]
@@ -28,13 +27,6 @@ all = [
     "anthropic>=0.46.0",
     "openai>=1.63.2",
     "mcp>=1.6.0; python_version >= '3.10'",
-]
-dev = [
-    "anthropic>=0.46.0",
-    "openai>=1.63.2",
-    "pytest-recording>=0.13.2",
-    "pytest>=8.3.4",
-    "ruff>=0.8.3",
 ]
 
 [tool.semantic_release]
@@ -60,7 +52,13 @@ build-backend = "setuptools.build_meta"
 
 [dependency-groups]
 dev = [
-    "autochat",
+    "anthropic>=0.46.0",
+    "openai>=1.63.2",
     "pytest-asyncio>=0.26.0",
     "vcrpy",
+    "pytest-recording>=0.13.2",
+    "pytest>=8.3.4",
+    "ruff>=0.8.3",
+    "mcp>=1.6.0; python_version >= '3.10'",
+    "pre-commit>=4.2.0",
 ]
