--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,4 +61,6 @@ dev = [
     "ruff>=0.8.3",
     "mcp>=1.6.0; python_version >= '3.10'",
     "pre-commit>=4.2.0",
+    "build>=1.2.2.post1",
+    "twine>=6.1.0",
 ]
